--- a/popitka_nomer_2/assets/index.html
+++ b/popitka_nomer_2/assets/index.html
@@ -13,22 +13,22 @@
         <div class="header_for_real" id="top">
             <h2 class="company_name"> Nextent </h2>
             <div class="header_many_words">
-                <a href="..//pages/xdd.html">
+                <a class="top_buttons" href="#top">
                     <p> Home </p>
                 </a>
-                <a href="#clients_companies">
+                <a class="top_buttons" href="#clients_companies">
                     <p> Service </p>
                 </a>
-                <a href="#clients_companies">
+                <a class="top_buttons" href="#clients_companies">
                     <p> Feature </p>
                 </a>
-                <a href="#clients_companies">
+                <a class="top_buttons" href="#clients_companies">
                     <p> Product </p>
                 </a>
-                <a href="#clients_companies">
+                <a class="top_buttons" href="#clients_companies">
                     <p> Testimonial </p>
                 </a>
-                <a href="#foooter">
+                <a class="top_buttons" href="#foooter">
                     <p> FAQ </p>
                 </a>
             </div>
@@ -44,14 +44,14 @@
     </header>
 
 </body>
-<section class="st_scroll">
-    <div class="div_s_textom">
+<section class="meeting_page">
+    <div class="big_meet_text">
         <h1 class="big_text"> Lessons and insights <br> <span class="green_color"> from 8 years</span></h1>
         <div class="first_p">
             <p> <span class="gray_color">Where to grow your business as a photographer: site or social media? </span>
             </p>
         </div>
-        <a href="#1" class="tothetop_button register_button"> Register </a>
+        <a href="#top" class="tothetop_button register_button"> Register </a>
     </div>
 
     <img class="test1" src="..//pictures/Illustration.svg" alt="test1">
@@ -99,12 +99,9 @@
         <div class="second_section_textandbutton">
             <div class="second_section_text">
                 <h2 class="gray_color"> The unseen of spending three years at Pixelgrade </h2>
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet justo ipsum. Sed accumsan quam
-                    vitae est varius fringilla. Pellentesque placerat vestibulum lorem sed porta. Nullam mattis
-                    tristique
-                    iaculis. Nullam pulvinar sit amet risus pretium auctor. Etiam quis massa pulvinar, aliquam quam
-                    vitae,
-                    tempus sem. Donec elementum pulvinar odio. </p>
+                <p> Here you will learn how to normally take photos, shoot video, edit them in programs such as Adobe
+                    Photoshop and Illustrator. You will learn how to use social media properly, learn some secrets of
+                    promotion and much more... </p>
             </div>
             <a href="#top" class="tothetop_button register_button"> Learn More </a>
         </div>
@@ -219,8 +216,8 @@
             <div class="scam_links">
                 <h3> Stay up to date </h3>
                 <form class="subscribe_form">
-                    <input type="email" placeholder="Enter your email" required>
-                    <button type="submit">send</button>
+                    <input class="email_input" type="email" placeholder="Enter your email" required>
+                    <button class="tothetop_button" type="submit">send</button>
                 </form>
             </div>
         </div>
